syntax = "proto3";

package v1api;
option go_package="v1api";

message Drive {
    string UUID = 1;
    string VID = 2;
    string PID = 3;
    string SerialNumber = 4;
    string Health = 5;
    string Type = 6;
    // size in bytes
    int64 Size = 7;
    string status = 8;
    string NodeId = 9;
    // path to the device. may not be set by hwmgr.
    string Path = 10;
}

