syntax = "proto3";

package node;
option go_package="v1api";

import "volume.proto";

message VolumeRequest {
}

message VolumeResponse {
    repeated Volume volumes = 1;
}

message AvailableCapacityRequest {
    string nodeId = 1;
}

message AvailableCapacityResponse {
    repeated AvailableCapacity availableCapacity = 1;
}

service VolumeManager {
    rpc GetAvailableCapacity(AvailableCapacityRequest) returns (AvailableCapacityResponse){};
}
